# aoxchain

./: .cargo  .gitignore  AGENTS.md  AOXC_PROGRESS_REPORT.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  KEY_MANAGEMENT.md  LICENSE  MAINNET_CHECKLIST.md  Makefile  NETWORK_SECURITY_ARCHITECTURE.md  PODMAN.md  QUANTUM_CHECKLIST.md  QUANTUM_ROADMAP.md  READ.md  README.md  ROADMAP.md  SCOPE.md  SECURITY.md  TESTING.md  VERSION.md  VERSIONING.md  WHITEPAPER.md  WORKSPACE_HEALTH_REVIEW.md  deny.toml  docker-compose.yaml
ai-builder/: ARCHITECTURE.md  Cargo.toml  README.md
ai-builder/configs/: default.toml
ai-builder/src/: config.rs  dataset.rs  error.rs  lib.rs  main.rs  model.rs  pipeline.rs  registry.rs  training.rs
ai-builder/tests/: smoke.rs
crates/aoxcai/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcai/src/: adapter.rs  audit.rs  capability.rs  constitution.rs  engine.rs  engine_core.rs  engine_tests.rs  error.rs  extension.rs  lib.rs  manifest.rs  model.rs  registry.rs  test_support.rs  traits.rs
crates/aoxcdata/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcdata/src/: data_store.rs  data_tests.rs  data_types.rs  lib.rs
crates/aoxcexec/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcexec/src/: engine.rs  exec_orchestrator.rs  exec_tests.rs  exec_types.rs  lib.rs  model.rs  model_orchestrator.rs  model_tests.rs  model_types.rs
crates/aoxchub/: ARCHITECTURE.md  COMMAND_CATALOG.md  Cargo.toml  MASTER_PRO_PLAN.md  OPERATOR_BLUEPRINT.md  README.md  SCOPE.md  SECURITY.md  TESTING.md  UI_GUIDE.md  eslint.config.js  index.html  mod.rs  package-lock.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
crates/aoxchub/assets/: main.css  tailwind.css
crates/aoxchub/examples/: component_gallery.rs
crates/aoxchub/public/: index.html
crates/aoxchub/src/: App.css  App.tsx  app.rs  cli.rs  index.css  lib.rs  main.rs  main.tsx  route.rs  state.rs  types.rs  views.rs
crates/aoxchub/src-tauri/: Cargo.toml  build.rs
crates/aoxchub/tests/: asset_embed_tests.rs  catalog_tests.rs  execute_tests.rs  integration.rs  localhost_tests.rs  policy_tests.rs  preview_tests.rs  route_tests.rs  runner_limits_tests.rs  smoke.rs  status_tests.rs
crates/aoxckit/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxckit/src/: main.rs
crates/aoxckit/tests/: cli_tests.rs
crates/aoxclibs/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxclibs/src/: encoding.rs  lib.rs  time.rs  types.rs
crates/aoxclibs/tests/: api_contract.rs
crates/aoxcmd/: ARCHITECTURE.md  Cargo.toml  LOGGING.md  READ.md  README.md  SCOPE.md  VERSION.md  build.rs
crates/aoxcmd/src/: build_info.rs  cli_support.rs  data_home.rs  lib.rs  main.rs  test_support.rs
crates/aoxcmob/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcmob/src/: config.rs  error.rs  lib.rs  types.rs  util.rs
crates/aoxcnet/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcnet/src/: config.rs  error.rs  lib.rs  metrics.rs  ports.rs  resilience.rs  secure_session.rs
crates/aoxcnet/tests/: resilience_integration.rs
crates/aoxconfig/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxconfig/src/: blockchain.rs  contracts.rs  lib.rs  mainnet.rs  quantum.rs
crates/aoxcore/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcore/src/: lib.rs  native_token.rs  native_token_ledger.rs  native_token_tests.rs  native_token_types.rs  version.rs
crates/aoxcrpc/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcrpc/proto/: api_v1.proto  zkp_auth.proto
crates/aoxcrpc/src/: admission.rs  config.rs  error.rs  lib.rs  types.rs
crates/aoxcsdk/: ARCHITECTURE.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcsdk/src/: lib.rs
crates/aoxcunity/: AOXC_COVENANT_CONSENSUS.md  Cargo.toml  READ.md  README.md  SCOPE.md  VERSION.md
crates/aoxcunity/src/: constitutional.rs  error.rs  fork_choice.rs  kernel.rs  kernel_engine.rs  kernel_helpers.rs  kernel_tests.rs  kernel_types.rs  lib.rs  messages.rs  mod.rs  proposer.rs  quorum.rs  rotation.rs  round.rs  safety.rs  seal.rs  state.rs  state_finalization.rs  state_tests.rs  state_voting.rs  store.rs  validator.rs  version.rs  vote.rs  vote_pool.rs
crates/aoxcunity/tests/: adversarial_consensus.rs  block_fuzz_latency.rs  hack_resilience.rs  kernel_fuzz_matrix.rs  kernel_soak.rs
crates/aoxcvm/: ARCHITECTURE.md  AUDIT_SCOPE.md  CHANGELOG.md  CHECKLIST.md  COMPATIBILITY.md  Cargo.toml  DEVELOPMENT_PLAN.md  READ.md  README.md  ROADMAP.md  SCOPE.md  SECURITY.md  VERSION.md
crates/aoxcvm/audit/: ASSUMPTIONS.md  CHECKLIST.md  CRYPTO_INVENTORY.md  DOS_SURFACES.md  FAILURE_MODES.md  KNOWN_LIMITATIONS.md  RELEASE_GATES.md  REVIEW_MAP.md  STORAGE_LAYOUT.md  TRUST_BOUNDARIES.md
crates/aoxcvm/benches/: decode.rs  execute_heavy.rs  execute_small.rs  gas_accounting.rs  object_lookup.rs  verify.rs
crates/aoxcvm/docs/: AUTH_CONSTITUTION.md  BYTECODE_FORMAT.md  CAPABILITY_MODEL.md  CRYPTO_AGILITY.md  CRYPTO_HASH_POSTURE.md  DETERMINISM_RULES.md  ERROR_MODEL.md  EXECUTION_MODEL.md  FINGERPRINT_SPEC.md  FORMALIZATION_NOTES.md  GAS_AND_METERING.md  GOVERNANCE_CONSTITUTION.md  HOST_BOUNDARY.md  INTEROP_SETTLEMENT_LAW.md  INVARIANTS.md  OBJECT_MODEL.md  PACKAGE_LAW.md  PHASE1_COMPLETION_REPORT.md  PHASE1_KERNEL_SPEC.md  PHASE1_QUALITY_PASS.md  PHASE2_EXECUTION_LAW.md  PHASE2_FINAL_STATUS.md  PHASE2_RUNTIME_EXPANSION.md  PHASE3_RELEASE_CLOSURE.md  PQ_AUTH_MODEL.md  (+12 more)
tests/: Cargo.toml  READ.md  VERSION.md
tests/src/: contract_native_flow.rs  environment_readiness_matrix.rs  external_surface_fuzz.rs  full_chain_regression_matrix.rs  lib.rs  mainnet_readiness_external.rs  production_readiness.rs  testnet_readiness_external.rs  unity_consensus_integration.rs  version_governance.rs  vm_production_closure_governance.rs
(+1554 files in other folders)
