[workspace]
resolver = "3"

members = [
    "crates/aoxchal",
    "crates/aoxcai",
    "crates/aoxcdata",
    "crates/aoxcenergy",
    "crates/aoxcexec",
    "crates/aoxckit",
    "crates/aoxclibs",
    "crates/aoxcmd",
    "crates/aoxcmob",
    "crates/aoxcnet",
    "crates/aoxconfig",
    "crates/aoxcontract",
    "crates/aoxcore",
    "crates/aoxcrpc",
    "crates/aoxcsdk",
    "crates/aoxcunity",
    "crates/aoxcvm",
    "crates/aoxchub",
    "tests", "crates/aoxchub",
]

[workspace.package]
version = "0.1.1-akdeniz"
edition = "2024"
authors = ["aoxchain@gmail.com"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2.0.18"
tracing = "0.1.44"
candle-core = "0.9.2"
async-trait = "0.1.89"
sha2 = "0.11.0"

blake3 = "1.8.3"
sha3 = "0.10.8"
rand = "0.10"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"

pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3.5"


[workspace.metadata.ci]
required_checks = [
    "cargo fmt --all --check",
    "cargo clippy --workspace --exclude aoxchub --all-targets --all-features -- -D warnings",
    "cargo test --workspace --exclude aoxchub --all-targets",
    "cargo check -p aoxchub --all-targets",
]
policy = "Formatting, core workspace clippy/tests, and an explicit desktop surface check are mandatory for merge and release branches."

[workspace.metadata.quality_focus]
aoxcore = "Increase property-based test coverage for identity and genesis models."
aoxckit = "Add golden tests for key rotation and revocation workflows."
aoxcdata = "Preserve deterministic storage/integrity coverage when changing persistence code."


[profile.release]
panic = "abort"
lto = true
codegen-units = 1

