[workspace]
resolver = "3"

members = [
    "crates/aoxchal",
    "crates/aoxcai",
    "crates/aoxcdata",
    "crates/aoxcenergy",
    "crates/aoxcexec",
    "crates/aoxckit",
    "crates/aoxclibs",
    "crates/aoxcmd",
    "crates/aoxcmob",
    "crates/aoxcnet",
    "crates/aoxconfig",
    "crates/aoxcontract",
    "crates/aoxcore",
    "crates/aoxcrpc",
    "crates/aoxcsdk",
    "crates/aoxcunity",
    "crates/aoxcvm",
    "crates/aoxchub",
    "tests",
]

[workspace.package]
version = "0.2.0-aoxcq"
edition = "2024"
authors = ["aoxchain@gmail.com"]
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/aoxchain/aoxchain"
description = "AOXChain institutional-grade Rust workspace for deterministic blockchain execution and operator tooling."

[workspace.dependencies]
# Core serialization and async runtime
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
async-trait = "0.1.89"

# Error handling and observability
thiserror = "2.0.18"
tracing = "0.1.44"
chrono = { version = "0.4.44", features = ["serde"] }

# AI / compute
candle-core = "0.9.2"

# Hashing and encoding
sha2 = "0.11.0"
sha3 = "0.10.8"
blake3 = "1.8.4"
base64 = "0.22.1"
hex = "0.4.3"

# Cryptography
aes-gcm = "0.10.3"
argon2 = "0.5.3"
ed25519-dalek = "2.2.0"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"

# Utilities
rand = "0.10"
serde_yaml = "0.9.34"
redb = "4.0.0"
axum = { version = "0.8.8", features = ["json", "macros"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
tower = { version = "0.5.3", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6.8", features = ["trace"] }
async-stream = "0.3.6"
futures-core = "0.3.32"

[workspace.metadata.ci]
required_checks = [
    "cargo fmt --all --check",
    "cargo clippy --workspace --exclude aoxchub --all-targets --all-features -- -D warnings",
    "cargo test --workspace --exclude aoxchub --all-targets",
    "cargo check -p aoxchub --all-targets",
]
policy = "Formatting, core workspace clippy/tests, and an explicit desktop surface check are mandatory for merge and release branches."

[workspace.metadata.quality_focus]
aoxcore = "Increase property-based test coverage for identity and genesis models."
aoxckit = "Add golden tests for key rotation and revocation workflows."
aoxcdata = "Preserve deterministic storage/integrity coverage when changing persistence code."

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
