[workspace]
resolver = "3"
members  = [
    "crates/aoxcai",
    "crates/aoxcdata",
    "crates/aoxcenergy",
    "crates/aoxcexec",
    "crates/aoxchub",
    "crates/aoxchal",
    "crates/aoxckit",
    "crates/aoxclibs",
    "crates/aoxcmd",
    "crates/aoxcmob",
    "crates/aoxcnet",
    "crates/aoxconfig",
    "crates/aoxcontract",
    "crates/kernel/aoxcore",
    "crates/aoxcrpc",
    "crates/aoxcsdk",
    "crates/kernel/aoxcunity",
    "crates/aoxcvm",
    "tests",
]

[workspace.package]
version = "0.2.0-alpha.2"
edition      = "2024"
rust-version = "1.92.0"
authors      = ["AOXChain Team <aoxchain@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/aoxchain/aoxchain"
description  = "High-performance, deterministic blockchain execution framework and institutional operator tooling."

[workspace.dependencies]
# --- Core Runtime & Async ---
tokio        = { version = "1.51.1", features = ["full"] }
async-trait  = "0.1.89"
async-stream = "0.3.6"
futures-core = "0.3.32"

# --- Serialization & Data ---
serde        = { version = "1.0.228", features = ["derive"] }
serde_json   = "1.0.149"
serde_yaml   = "0.9.34"
chrono       = { version = "0.4.44", features = ["serde"] }

# --- Networking & API ---
axum         = { version = "0.8.8", features = ["json", "macros"] }
tower        = { version = "0.5.3", features = ["limit", "timeout", "util"] }
tower-http   = { version = "0.6.8", features = ["trace"] }

# --- Cryptography & Hashing ---
sha2         = "0.11.0"
sha3         = "0.10.8"
blake3       = "1.8.4"
aes-gcm      = "0.10.3"
argon2       = "0.5.3"
ed25519-dalek = "2.2.0"
libcrux-ml-dsa = "0.0.8"

# --- Infrastructure & Storage ---
redb         = "4.0.0"
candle-core  = "0.9.2"
clap         = { version = "4.6.0", features = ["derive", "env"] }

# --- Observability & Utilities ---
tracing      = "0.1.44"
thiserror    = "2.0.18"
base64       = "0.22.1"
hex          = "0.4.3"
rand         = "0.10"

[workspace.metadata.ci]
required_checks = [
    "cargo fmt --all --check",
    "cargo clippy --workspace --exclude aoxchub --all-targets --all-features -- -D warnings",
    "cargo test --workspace --exclude aoxchub --all-targets",
    "cargo check -p aoxchub --all-targets",
]
policy = "Strict adherence to formatting, clippy linting, and comprehensive test suites is required for all merge requests."

[workspace.metadata.quality_focus]
aoxcore  = "Enhance property-based testing for identity modules and genesis state transitions."
aoxckit  = "Implement golden tests for cryptographic key rotation and revocation lifecycles."
aoxcdata = "Maintain strict determinism in storage layers and data integrity verification."

[profile.release]
panic         = "abort"
lto           = true
codegen-units = 1
strip         = true
