[package]
name = "tests"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
aoxconfig = { path = "../crates/aoxconfig" }
aoxcontract = { path = "../crates/aoxcontract" }
aoxcore = { path = "../crates/aoxcore" }
aoxcdata = { path = "../crates/aoxcdata" }
aoxcsdk = { path = "../crates/aoxcsdk" }
aoxcvm = { path = "../crates/aoxcvm" }
serde_json = { workspace = true }
