[package]
name = "tests"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
aoxcmd = { path = "../crates/aoxcmd" }
aoxcnet = { path = "../crates/aoxcnet" }
aoxcunity = { path = "../crates/aoxcunity" }
aoxconfig = { path = "../crates/aoxconfig" }
aoxcontract = { path = "../crates/aoxcontract" }
aoxcore = { path = "../crates/aoxcore" }
aoxcdata = { path = "../crates/aoxcdata" }
aoxcsdk = { path = "../crates/aoxcsdk" }
aoxcvm = { path = "../crates/aoxcvm" }
serde_json = { workspace = true }
rand = { workspace = true }
hex = "0.4"
ed25519-dalek = "2"
