[package]
name = "aoxcai"
version = "0.1.1-akdeniz"
edition = "2024"
authors = ["Orcun <your@email.com>"]
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
async-trait = "0.1.89"
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.13", features = ["rustls", "json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
httpmock = "0.8"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
