[package]
name = "aoxcai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
async-trait = "0.1.89"
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.13", features = ["rustls", "json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
httpmock = "0.8"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
