[package]
name = "aoxcexec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
