[package]
name = "aoxchub"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AOXC local-only operator control plane with transparent command preview and secure execution."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
tower-http = { version = "0.6", features = ["trace"] }
