[package]
name = "aoxchub"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AOXC local-only operator control plane with transparent command preview and secure execution."

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
tower-http = { version = "0.6", features = ["trace"] }
tower = "0.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
async-stream = "0.3"
futures-core = "0.3"
