[package]
name = "aoxchub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "AOXC local-only operator control plane with transparent command preview and secure execution."

[dependencies]
axum = { workspace = true, features = ["json", "macros"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
thiserror = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tower = { workspace = true, features = ["limit", "timeout", "util"] }
chrono = { workspace = true, features = ["serde", "clock"] }
async-stream = { workspace = true }
futures-core = { workspace = true }
