[package]
name = "aoxckit"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aoxckit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4.3"
serde = { workspace = true }

aoxcore = { path = "../kernel/aoxcore" }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
