[package]
name = "aoxclibs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
base64.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true


