[package]
name = "aoxcmd"
version = "0.1.1-akdeniz"
edition = "2024"
default-run = "aoxc"
build = "build.rs"
license = "MIT"
description = "AOXC operator command plane with audit-oriented diagnostics and bootstrap workflows."

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
sha2 = "0.11.0"
sha3 = "0.11.0"
hex = "0.4.3"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
ed25519-dalek = "2.2.0"
aoxcunity = { path = "../aoxcunity" }
aoxcai = { path = "../aoxcai" }
aoxcore = { path = "../aoxcore" }
aoxcdata = { path = "../aoxcdata" }
redb = "4.0.0"

[build-dependencies]
sha2 = "0.11.0"
hex = "0.4.3"

[[bin]]
name = "aoxc"
path = "src/main.rs"
