[package]
name = "aoxcmd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
default-run = "aoxc"
build = "build.rs"
description = "AOXC operator command plane with audit-oriented diagnostics and bootstrap workflows."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
ed25519-dalek = { workspace = true }
aoxcunity = { path = "../aoxcunity" }
aoxcai = { path = "../aoxcai" }
aoxcore = { path = "../aoxcore" }
aoxcdata = { path = "../aoxcdata" }
redb = { workspace = true }

[build-dependencies]
sha2 = { workspace = true }
hex = { workspace = true }

[[bin]]
name = "aoxc"
path = "src/main.rs"
