[package]
name = "aoxcmd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
default-run = "aoxc"
build = "build.rs"
description = "AOXC operator command plane with audit-oriented diagnostics and bootstrap workflows."

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
sha2 = "0.11.0"
sha3 = "0.11.0"
hex = "0.4.3"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
ed25519-dalek = "2.2.0"
aoxcunity = { path = "../kernel/aoxcunity" , version = "0.2.0-alpha.1"}
aoxcai = { path = "../aoxcai" , version = "0.2.0-alpha.1"}
aoxcore = { path = "../kernel/aoxcore" , version = "0.2.0-alpha.1"}
aoxcdata = { path = "../aoxcdata" , version = "0.2.0-alpha.1"}
redb = "4.0.0"

[build-dependencies]
sha2 = "0.11.0"
hex = "0.4.3"

[[bin]]
name = "aoxc"
path = "src/main.rs"
