[package]
name = "aoxcmob"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
reqwest = { version = "0.13", features = ["rustls", "json"] }
aoxcore = { path = "../kernel/aoxcore" , version = "0.2.0-alpha.1"}
aoxcsdk = { path = "../aoxcsdk" , version = "0.2.0-alpha.1"}
