[package]
name = "aoxcnet"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
aoxcunity = { path = "../kernel/aoxcunity" }
