[package]
name = "aoxconfig"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
aoxcontract = { path = "../aoxcontract" , version = "0.2.0-alpha.1"}
aoxcore = { path = "../kernel/aoxcore" , version = "0.2.0-alpha.1" }
