[package]
name = "aoxcore"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
libcrux-ml-dsa  = { workspace = true }
pqcrypto-traits = { workspace = true }
pqcrypto-mldsa = { workspace = true }

aoxcunity = { path = "../aoxcunity" }
aoxcontract = { path = "../aoxcontract" }
bip39 = { version = "2", default-features = false, features = ["all-languages", "rand", "serde", "std", "zeroize"] }
zeroize = "1.8.2"
getrandom = "0.4.2"
