[package]
name = "aoxcunity"
version.workspace = true
edition.workspace = true

[dependencies]
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
