[package]
name = "aoxcvm"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "AOXChain virtual machine kernel v1"

[dependencies]
aoxcontract = { path = "../aoxcontract" }
aoxconfig = { path = "../aoxconfig" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true

[dev-dependencies]
aoxcsdk = { path = "../aoxcsdk" }
