[package]
name = "aoxcvm"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "AOXChain virtual machine kernel v1"

[dependencies]
aoxcontract = { path = "../aoxcontract" }
aoxconfig = { path = "../aoxconfig" }
aoxcore = { path = "../kernel/aoxcore" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true

[dev-dependencies]
aoxcsdk = { path = "../aoxcsdk" }


[[bench]]
name = "decode"
harness = false

[[bench]]
name = "execute_small"
harness = false

[[bench]]
name = "execute_heavy"
harness = false

[[bench]]
name = "gas_accounting"
harness = false

[[bench]]
name = "object_lookup"
harness = false

[[bench]]
name = "verify"
harness = false
