[package]
name = "aoxcvm"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "AOXChain virtual machine kernel v1"

[dependencies]
aoxcontract = { path = "../aoxcontract" , version = "0.2.0-alpha.1"}
aoxconfig = { path = "../aoxconfig" , version = "0.2.0-alpha.1"}
aoxcore = { path = "../kernel/aoxcore" , version = "0.2.0-alpha.1"}
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true

[dev-dependencies]
aoxcsdk = { path = "../aoxcsdk" , version = "0.2.0-alpha.1"}


[[bench]]
name = "decode"
harness = false

[[bench]]
name = "execute_small"
harness = false

[[bench]]
name = "execute_heavy"
harness = false

[[bench]]
name = "gas_accounting"
harness = false

[[bench]]
name = "object_lookup"
harness = false

[[bench]]
name = "verify"
harness = false
