[package]
name = "aoxchub"
version.workspace = true
edition.workspace = true
authors = ["orcun"]
description = "AOXC Control Center and Hub"
publish = false

[lib]
name = "aoxchub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Tauri build integration for desktop packaging.
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Core Tauri runtime kept intentionally minimal in order to reduce
# desktop attack surface and feature drift.
tauri = { version = "2.10.3", features = [] }

# Official plugins required by the AOXC desktop control plane.
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"

# Serialization and structured data interchange.
serde = { workspace = true }
serde_json = { workspace = true }

# Internal AOXC workspace crates.
aoxcore = { path = "../../aoxcore" }
aoxcai = { path = "../../aoxcai" }
aoxcrpc = { path = "../../aoxcrpc" }
aoxcvm = { path = "../../aoxcvm" }
aoxclibs = { path = "../../aoxclibs" }
aoxcmd = { path = "../../aoxcmd" }
aoxconfig = { path = "../../aoxconfig" }

# Async runtime and diagnostics.
tokio = { workspace = true }
log = "0.4"
tracing = { workspace = true }
glib = "0.22.3"
glib-sys = "0.22.3"
gio = "0.22.2"
gio-sys = "0.22.0"

[features]
# Enables the custom protocol required by packaged desktop builds.
custom-protocol = ["tauri/custom-protocol"]
