[package]
name = "aoxcore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
libcrux-ml-dsa  = { workspace = true }

aoxcunity = { path = "../aoxcunity" , version = "0.2.0-alpha.1"}
aoxcontract = { path = "../../aoxcontract" , version = "0.2.0-alpha.1"}
bip39 = { version = "2", default-features = false, features = ["all-languages", "serde", "std", "zeroize"] }
zeroize = "1.8.2"
getrandom = "0.4.2"
