[package]
name = "aoxcunity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libcrux-ml-dsa = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
